@@ -14,7 +14,7 @@ boot_img_LDFLAGS = -nostdlib -Wl,-N,-Ttext,7C00
 # For pxeboot.img
 pxeboot_img_SOURCES = boot/i386/pc/pxeboot.S
 pxeboot_img_ASFLAGS = $(COMMON_ASFLAGS)
-pxeboot_img_LDFLAGS = -nostdlib -Wl,-N,-Ttext,8000
+pxeboot_img_LDFLAGS = -nostdlib -Wl,-N,-Ttext,7C00
 
 # For diskboot.img.
 diskboot_img_SOURCES = boot/i386/pc/diskboot.S
